--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,16 @@
   article {
     margin-top: 20px;
   }
+
+  .gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.gallery-card {
+    width: 200px;
+    margin-bottom: 20px;
+}
+
