--- a/src/App.css
+++ b/src/App.css
@@ -1,85 +1,57 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    max-width: 100%;
+    margin: 0;
+    padding: 20px;
     text-align: center;
-  }
-  
-  .logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
-  }
-  
-  .logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-  }
-  
-  .logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
-  }
-  
-  @keyframes logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-  
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-      animation: logo-spin infinite 20s linear;
-    }
-  }
-  
-  .card {
-    padding: 2em;
-  }
-  
-  .read-the-docs {
-    color: #888;
-  }
-  
-  .encabezado {
-    padding: 20px;
-  }
-  
-  .principal {
-    display:flex;
-    margin-top: 30px;
-  }
-  
-  .lista {
-    overflow: auto;
-  }
-  
-  section {
-    margin-left: 20px;
-    padding: 30px;
-  }
-  
-  .formulario div {
-  margin-bottom: 10px;
-  max-width: fit-content;
-  }
-  
-  article {
-    margin-top: 20px;
-  }
+    background-color: black;
+}
 
-  .gallery-container {
+.logo {
+    width: 30%;
+    pointer-events: none;
+}
+
+section {
+    margin-bottom: 30px;
+}
+
+input {
+    width: 60%;
+}
+
+select {
+    width: 20%;
+    margin-bottom: 30px;
+    background-color: yellow;
+    border-radius: 10px;
+}
+
+.galeria {
     display: flex;
+    max-width: 100vw;
+    width: 100%;
     flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    background: linear-gradient(rgba(89, 180, 255, 0.8), rgba(255, 118, 255, 0.8));
 }
 
-.gallery-card {
-    width: 200px;
-    margin-bottom: 20px;
+.card {
+    width: 280px;
+    object-fit: cover;
+    object-position: center;
+    margin-bottom: 5px;
+    padding: 2em;
 }
 
+img:hover {
+    cursor: pointer;
+    opacity: 0.7;
+    transform: scale(1.05);
+    transform: rotate(-1.2deg) scale(1.05);
+    transition: 0.6s ease-out;
+    filter: grayscale(0.9);
+}
