--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
     max-width: 100%;
-    margin: 0;
+    margin: 0 auto; 
     padding: 20px;
     text-align: center;
     background-color: black;
@@ -14,6 +14,7 @@
 section {
     margin-bottom: 30px;
 }
+
 
 input {
     width: 60%;
